Changed the projects section into modal dialogs.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<a href="#page-top"></a>
 					</li>
 					<li class="page-scroll">
-						<a href="#projects">Projects</a>
+						<a href="#portfolio">Projects</a>
 					</li>
 					<li class="page-scroll">
 						<a href="#research">Research</a>
@@ -80,7 +80,12 @@
 					<div class="intro-text text-center">
 						<span class="name">Leonard Hoon</span>
 						<hr class="star-dark">
-
+						<!--span class="skills">Analyst - Data Scientist - Software Engineer</span>
+						<br>
+						<br-->
+						<span class="skills">Data Driven Tactics</span>
+						<br>
+						<br>
 						<div class="col-lg-8 col-lg-offset-2 text-center">
 							<a href="https://bitbucket.org/LHoon" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-bitbucket"></i></a>
 							<a href="https://github.com/lhoon" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
@@ -94,7 +99,7 @@
 	</header>
 
 	<!-- Projects Section -->
-	<section id="projects">
+	<section id="portfolio">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-12 text-center">
@@ -108,35 +113,45 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2 text-justify">
-					<br>
-					<h3><a href="https://vic.fightdementia.org.au/vic/3d-%E2%80%98dementia-friendly-home%E2%80%99-app-to-assist-carers-and-empower-people-living-with-dementia" class="dark" target="_blank">The Dementia Friendly Home</a></h3>
-					<h4>Deakin Software and Technology Innovation Laboratory (DSTIL)</h4>
-					<h5>Involvement: Usability Analyst (version 1)</h5>
-					<img class="img-responsive img-rounded" src="img/bedroom-good.jpg" alt="Screencap of the Dementia Friendly Home app.">
-					<br>
-					<br>
-					<p>Alzheimer’s Australia engaged us to develop an app to educate carers about Dementia Enabling Environment Principles through manipulation of a 3D modelled home. These changes can be effected with annotated rationale and consequences to allow people living with dementia to maintain their independence at home. Store pages: <a href="https://play.google.com/store/apps/details?id=au.com.alzheimersaustraliavic.dementiafriendlyhome&hl=en" class="dark" target="_blank"><i class="fa fa-fw fa-android"></i></a> <a href="https://itunes.apple.com/au/app/the-dementia-friendly-home/id1051978132?mt=8" class="dark" target="_blank"><i class="fa fa-fw fa-apple"></i></a></p>
-					<br>
-					<br>
-					<h3><a href="http://www.trrproject.com/" class="dark" target="_blank">Trauma Reception & Resuscitation</a></h3>
-					<h4>Swinburne NICTA Software Innovation Lab (SSIL)</h4>
-					<h5>Involvement: Researcher</h5>
-					<img class="img-responsive img-rounded" src="img/trr.jpg" alt="Dr Joseph Mathew showing Dr Felix Tan and I around in the trauma bays.">
-					<br>
-					<br>
-					<p>Trauma Reception & Resuscitation project is a Decision Support System built at the SSIL for The Alfred’s Trauma Centre. This system also enabled the end users enrichment capability over the algorithmic knowledge base. </p>
-					<br>
-					<p>Since deployment, an 80% reduction in blood administered to patients, 21% reduction in errors of omission and 3 hours less time spent in trauma have been observed. I produced one <a href="https://aut.researchgateway.ac.nz/handle/10292/8160" class="dark" target="_blank">conference</a> and one <a href="http://journal.acs.org.au/index.php/ajis/article/viewFile/1146/701" class="dark" target="_blank">journal</a> publication about affordances enabled by this system.</p>
-					<br>
-					<br>
-					<h3><a href="https://github.com/lhoon/seacowdb" class="dark" target="_blank">Seacow Database Management System</a></h3>
-					<h4>Swinburne University of Technology</h4>
-					<h5>Involvement: Developer</h5>
-					<img class="img-responsive img-rounded" src="img/swinbrain.gif" alt="Screengrab of one the articles I wrote on the Swinbrain Wiki.">
-					<br>
-					<br>
-					<p>We were challenged by in our Advanced .NET unit to design and develop a system exhibiting our understanding of concurrent programming. Seacow offers Transactional and Isolation level support with Telnet connectivity. Lessons gleaned were persisted on the faculty's wiki for public reference. My articles are: <a href="http://swinbrain.ict.swin.edu.au/wiki/Concurrent_Programming_-_Reader_Writer_Lock" class="dark" target="_blank">Concurrent Programming – Reader Writer Lock</a>, <a href="http://swinbrain.ict.swin.edu.au/wiki/Database_Concurrency" class="dark" target="_blank">DB Concurrency</a> and <a href="http://swinbrain.ict.swin.edu.au/wiki/Isolation" class="dark" target="_blank">DB Isolation Levels</a>, while the code is hosted on <a href="https://github.com/lhoon/seacowdb" class="dark" target="_blank">Github - Seacow DBMS</a>.</p>
+				<div class="col-sm-4 portfolio-item">
+					<a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+						<div class="caption">
+							<div class="caption-content">
+								<i class="fa fa-search-plus fa-3x"></i>
+							</div>
+						</div>
+						<img src="img/swinbrain.gif" class="img-responsive img-rounded" alt="">
+					</a>
+				</div>
+				<div class="col-sm-4 portfolio-item">
+					<a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+						<div class="caption">
+							<div class="caption-content">
+								<i class="fa fa-search-plus fa-3x"></i>
+							</div>
+						</div>
+						<img src="img/bedroom-good.jpg" class="img-responsive img-rounded" alt="">
+					</a>
+				</div>
+				<div class="col-sm-4 portfolio-item">
+					<a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+						<div class="caption">
+							<div class="caption-content">
+								<i class="fa fa-search-plus fa-3x"></i>
+							</div>
+						</div>
+						<img src="img/trr.jpg" class="img-responsive img-rounded" alt="">
+					</a>
+				</div>
+				<div class="col-sm-4 portfolio-item">
+					<a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+						<div class="caption">
+							<div class="caption-content">
+								<i class="fa fa-search-plus fa-3x"></i>
+							</div>
+						</div>
+						<img src="img/swinbrain.gif" class="img-responsive img-rounded" alt="">
+					</a>
 				</div>
 			</div>
 		</div>
@@ -330,10 +345,6 @@
 							<td class="time">2006:</td>
 							<td class="item"><b>Diploma of Information Technology (E-Commerce Technology)</b>, Temasek Polytechnic, Singapore.</td>
 						</tr>
-
-
-
-
 					</table>
 				</div>
 			</div>
@@ -381,6 +392,130 @@
 			</div>
 		</div>
 	</footer>
+
+	<!-- Portfolio Modals -->
+	<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-content">
+			<div class="close-modal" data-dismiss="modal">
+				<div class="lr">
+					<div class="rl">
+					</div>
+				</div>
+			</div>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-8 col-lg-offset-2">
+						<div class="modal-body">
+							<h2>Dynamic Pricing</h2>
+							<hr class="star-primary">
+							<h3>Cover Genius</h4>
+							<h5>Involvement: Data Scientist, Software Engineer</h5>
+							<br>
+							<img class="img-responsive img-rounded img-centered" src="img/bedroom-good.jpg" alt="Screencap of the Dementia Friendly Home app.">
+							<br>
+							<p class="text-justify">At <a href="http://www.covergenius.biz/" class="dark" target="_blank">Cover Genius</a>, we designed and launched the world's first dynamic pricing engine for rental car insurance. Running off our bespoke A/B and Multivariate testing framework, this system helped us detect pricing sensitivity across individual variables. In effect, we raised B2C and B2B conversion, increasing gross revenue by 15%.</p>
+							<br>
+							<br>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-content">
+			<div class="close-modal" data-dismiss="modal">
+				<div class="lr">
+					<div class="rl">
+					</div>
+				</div>
+			</div>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-8 col-lg-offset-2">
+						<div class="modal-body">
+							<h2>The Dementia Friendly Home</h2>
+							<hr class="star-primary">
+							<h3>Deakin Software and Technology Innovation Laboratory (DSTIL)</h4>
+							<h5>Involvement: Usability Analyst (version 1)</h5>
+							<br>
+							<img class="img-responsive img-rounded img-centered" src="img/bedroom-good.jpg" alt="Screencap of the Dementia Friendly Home app.">
+							<br>
+							<p class="text-justify"><a href="https://vic.fightdementia.org.au/vic/3d-%E2%80%98dementia-friendly-home%E2%80%99-app-to-assist-carers-and-empower-people-living-with-dementia" class="dark" target="_blank">Alzheimer’s Australia</a> engaged us to develop an app to educate carers about Dementia Enabling Environment Principles through manipulation of a 3D modelled home. These changes can be effected with annotated rationale and consequences to allow people living with dementia to maintain their independence at home.
+							<br>
+							<br>
+							<p class="text-justify">Store pages: <a href="https://play.google.com/store/apps/details?id=au.com.alzheimersaustraliavic.dementiafriendlyhome&hl=en" class="dark" target="_blank"><i class="fa fa-fw fa-android"></i></a> <a href="https://itunes.apple.com/au/app/the-dementia-friendly-home/id1051978132?mt=8" class="dark" target="_blank"><i class="fa fa-fw fa-apple"></i></a></p>
+							<br>
+							<br>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-content">
+			<div class="close-modal" data-dismiss="modal">
+				<div class="lr">
+					<div class="rl">
+					</div>
+				</div>
+			</div>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-8 col-lg-offset-2">
+						<div class="modal-body">
+							<h2>Trauma Reception & Resuscitation</h2>
+							<hr class="star-primary">
+							<h4>Swinburne NICTA Software Innovation Lab (SSIL)</h4>
+							<h5>Involvement: Researcher</h5>
+							<br>
+							<img class="img-responsive img-rounded img-centered" src="img/trr.jpg" alt="Dr Joseph Mathew showing Dr Felix Tan and I around in the trauma bays.">
+							<br>
+							<p class="text-justify">The <a href="http://www.trrproject.com/" class="dark" target="_blank">Trauma Reception & Resuscitation</a> project is a Decision Support System built at the SSIL for The Alfred’s Trauma Centre. This system also enabled the end users enrichment capability over the algorithmic knowledge base. </p>
+							<br>
+							<br>
+							<p class="text-justify">Since deployment, an 80% reduction in blood administered to patients, 21% reduction in errors of omission and 3 hours less time spent in trauma have been observed. I produced one <a href="https://aut.researchgateway.ac.nz/handle/10292/8160" class="dark" target="_blank">conference</a> and one <a href="http://journal.acs.org.au/index.php/ajis/article/viewFile/1146/701" class="dark" target="_blank">journal</a> publication about affordances enabled by this system.</p>
+							<br>
+							<br>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-content">
+			<div class="close-modal" data-dismiss="modal">
+				<div class="lr">
+					<div class="rl">
+					</div>
+				</div>
+			</div>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-8 col-lg-offset-2">
+						<div class="modal-body">
+							<h2>Seacow Database Management System</h2>
+							<hr class="star-primary">
+							<h4>Swinburne University of Technology</h4>
+							<h5>Involvement: Developer</h5>
+							<br>
+							<img class="img-responsive img-rounded img-centered" src="img/swinbrain.gif" alt="Screengrab of one the articles I wrote on the Swinbrain Wiki.">
+							<br>
+							<p class="text-justify">We were challenged by in our Advanced .NET unit to design and develop a system exhibiting our understanding of concurrent programming. The <a href="https://github.com/lhoon/seacowdb" class="dark" target="_blank">Seacow</a> DBMS offers Transactional and Isolation level support with Telnet connectivity. Lessons gleaned were persisted on the faculty's wiki for public reference. My articles are: <a href="http://swinbrain.ict.swin.edu.au/wiki/Concurrent_Programming_-_Reader_Writer_Lock" class="dark" target="_blank">Concurrent Programming – Reader Writer Lock</a>, <a href="http://swinbrain.ict.swin.edu.au/wiki/Database_Concurrency" class="dark" target="_blank">DB Concurrency</a> and <a href="http://swinbrain.ict.swin.edu.au/wiki/Isolation" class="dark" target="_blank">DB Isolation Levels</a>, while the code is hosted on <a href="https://github.com/lhoon/seacowdb" class="dark" target="_blank">Github - Seacow DBMS</a>.</p>
+							<br>
+							<br>
+							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
 	<div class="scroll-top page-scroll visible-xs visble-sm visble-md">
