Added the right image for dynamic pricing.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<!--span class="skills">Analyst - Data Scientist - Software Engineer</span>
 						<br>
 						<br-->
-						<span class="skills">Data Driven Tactics</span>
+						<span class="skills">Data Driven Tactician</span>
 						<br>
 						<br>
 						<div class="col-lg-8 col-lg-offset-2 text-center">
@@ -112,6 +112,7 @@
 					<span class="quote">“Experience is the teacher of all things.”</span><span class="quoter"> ― Julius Caesar</span>
 				</div>
 			</div>
+			<br>
 			<div class="row">
 				<div class="col-sm-4 portfolio-item">
 					<a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
@@ -120,7 +121,7 @@
 								<i class="fa fa-search-plus fa-3x"></i>
 							</div>
 						</div>
-						<img src="img/swinbrain.gif" class="img-responsive img-rounded" alt="">
+						<img src="img/dyn-price.gif" class="img-responsive img-rounded" alt="">
 					</a>
 				</div>
 				<div class="col-sm-4 portfolio-item">
@@ -411,7 +412,7 @@
 							<h3>Cover Genius</h4>
 							<h5>Involvement: Data Scientist, Software Engineer</h5>
 							<br>
-							<img class="img-responsive img-rounded img-centered" src="img/bedroom-good.jpg" alt="Screencap of the Dementia Friendly Home app.">
+							<img class="img-responsive img-rounded img-centered" src="img/dyn-price.gif" alt="Dynamic Pricing results.">
 							<br>
 							<p class="text-justify">At <a href="http://www.covergenius.biz/" class="dark" target="_blank">Cover Genius</a>, we designed and launched the world's first dynamic pricing engine for rental car insurance. Running off our bespoke A/B and Multivariate testing framework, this system helped us detect pricing sensitivity across individual variables. In effect, we raised B2C and B2B conversion, increasing gross revenue by 15%.</p>
 							<br>
