--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="#page-top">Hi, I'm Leonard</a>
 			</div>
@@ -181,7 +180,7 @@
 								<i class="fa fa-search-plus fa-3x"></i>
 							</div>
 						</div>
-						<img src="img/dora.jpeg" class="img-responsive img-rounded" alt="">
+						<img src="img/phd.png" class="img-responsive img-rounded" alt="">
 						<p>My PhD</p>
 					</a>
 				</div>
@@ -192,7 +191,7 @@
 								<i class="fa fa-search-plus fa-3x"></i>
 							</div>
 						</div>
-						<img src="img/dora.jpeg" class="img-responsive img-rounded" alt="">
+						<img src="img/review-growth.png" class="img-responsive img-rounded" alt="">
 						<p>App Review Analysis</p>
 					</a>
 				</div>
@@ -203,7 +202,7 @@
 								<i class="fa fa-search-plus fa-3x"></i>
 							</div>
 						</div>
-						<img src="img/dora.jpeg" class="img-responsive img-rounded" alt="">
+						<img src="img/agents.png" class="img-responsive img-rounded" alt="">
 						<p>Other Publications</p>
 					</a>
 				</div>
