--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
 						<a href="#page-top"></a>
 					</li>
 					<li class="page-scroll">
-						<a href="#portfolio">Projects</a>
-					</li>
-					<li class="page-scroll">
-						<a href="#research">Research</a>
+						<a href="#portfolio">Portfolio</a>
 					</li>
 					<li class="page-scroll">
 						<a href="#about">About</a>
@@ -96,30 +93,31 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2>Projects</h2>
+					<h2>Portfolio</h2>
 					<hr class="star-primary">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-center">
-					<span class="quote">“Experience is the teacher of all things.”</span><span class="quoter"> ― Julius Caesar</span>
+					<span class="quote">“Science is a wonderful thing if one does not have to earn one's living at it.”</span><span class="quoter"> ― Albert Einstein</span>
+					<!-- <span class="quote">“Experience is the teacher of all things.”</span><span class="quoter"> ― Julius Caesar</span> -->
 				</div>
 			</div>
 			<br>
 			<div class="row">
 				<div class="col-sm-4 portfolio-item">
-					<a href="#portfolioModal1" class="portfolio-link dark text-center" data-toggle="modal">
+					<a href="#dynamic-pricing" class="portfolio-link dark text-center" data-toggle="modal">
 						<div class="caption">
 							<div class="caption-content">
 								<i class="fa fa-search-plus fa-3x"></i>
 							</div>
 						</div>
 						<img src="img/dyn-price.gif" class="img-responsive img-rounded" alt="">
-						<p>Dynamic Pricing for Rental Car Insurance</p>
+						<p>Dynamic Pricing</p>
 					</a>
 				</div>
 				<div class="col-sm-4 portfolio-item">
-					<a href="#portfolioModal2" class="portfolio-link dark text-center" data-toggle="modal">
+					<a href="#dementia" class="portfolio-link dark text-center" data-toggle="modal">
 						<div class="caption">
 							<div class="caption-content">
 								<i class="fa fa-search-plus fa-3x"></i>
@@ -130,7 +128,7 @@
 					</a>
 				</div>
 				<div class="col-sm-4 portfolio-item">
-					<a href="#portfolioModal3" class="portfolio-link dark text-center" data-toggle="modal">
+					<a href="#trr" class="portfolio-link dark text-center" data-toggle="modal">
 						<div class="caption">
 							<div class="caption-content">
 								<i class="fa fa-search-plus fa-3x"></i>
@@ -141,7 +139,29 @@
 					</a>
 				</div>
 				<div class="col-sm-4 portfolio-item">
-					<a href="#portfolioModal4" class="portfolio-link dark text-center" data-toggle="modal">
+					<a href="#phd" class="portfolio-link dark text-center" data-toggle="modal">
+						<div class="caption">
+							<div class="caption-content">
+								<i class="fa fa-search-plus fa-3x"></i>
+							</div>
+						</div>
+						<img src="img/phd.png" class="img-responsive img-rounded" alt="">
+						<p>PhD: Extracting Signal from the Noise of App Reviews</p>
+					</a>
+				</div>
+				<div class="col-sm-4 portfolio-item">
+					<a href="#publications" class="portfolio-link dark text-center" data-toggle="modal">
+						<div class="caption">
+							<div class="caption-content">
+								<i class="fa fa-search-plus fa-3x"></i>
+							</div>
+						</div>
+						<img src="img/review-growth.png" class="img-responsive img-rounded" alt="">
+						<p>Research Publications</p>
+					</a>
+				</div>
+				<div class="col-sm-4 portfolio-item">
+					<a href="#seacow" class="portfolio-link dark text-center" data-toggle="modal">
 						<div class="caption">
 							<div class="caption-content">
 								<i class="fa fa-search-plus fa-3x"></i>
@@ -149,61 +169,6 @@
 						</div>
 						<img src="img/swinbrain.gif" class="img-responsive img-rounded" alt="">
 						<p>Seacow Database Management System</p>
-					</a>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<!-- Research Section -->
-	<section id="research">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<h2>Research</h2>
-					<hr class="star-primary">
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2 text-center">
-					<span class="quote">“Science is a wonderful thing if one does not have to earn one's living at it.”</span><span class="quoter"> ― Albert Einstein</span>
-				</div>
-			</div>
-			<br>
-			<h4 style="text-align:center;"><a href="https://scholar.google.com/citations?user=9UGKJ2wAAAAJ" class="dark" target="_blank">My Google Scholar profile</a></h4>
-			<br>
-			<div class="row">
-				<div class="col-sm-4 research-item">
-					<a href="#researchModal1" class="research-link dark text-center" data-toggle="modal">
-						<div class="caption">
-							<div class="caption-content">
-								<i class="fa fa-search-plus fa-3x"></i>
-							</div>
-						</div>
-						<img src="img/phd.png" class="img-responsive img-rounded" alt="">
-						<p>My PhD</p>
-					</a>
-				</div>
-				<div class="col-sm-4 research-item">
-					<a href="#researchModal2" class="research-link dark text-center" data-toggle="modal">
-						<div class="caption">
-							<div class="caption-content">
-								<i class="fa fa-search-plus fa-3x"></i>
-							</div>
-						</div>
-						<img src="img/review-growth.png" class="img-responsive img-rounded" alt="">
-						<p>App Review Analysis</p>
-					</a>
-				</div>
-				<div class="col-sm-4 research-item">
-					<a href="#researchModal3" class="research-link dark text-center" data-toggle="modal">
-						<div class="caption">
-							<div class="caption-content">
-								<i class="fa fa-search-plus fa-3x"></i>
-							</div>
-						</div>
-						<img src="img/agents.png" class="img-responsive img-rounded" alt="">
-						<p>Other Publications</p>
 					</a>
 				</div>
 			</div>
@@ -253,7 +218,7 @@
 	</footer>
 
 	<!-- Portfolio Modals -->
-	<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="portfolio-modal modal fade" id="dynamic-pricing" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-content">
 			<div class="close-modal" data-dismiss="modal">
 				<div class="lr">
@@ -282,7 +247,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="portfolio-modal modal fade" id="dementia" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-content">
 			<div class="close-modal" data-dismiss="modal">
 				<div class="lr">
@@ -301,7 +266,10 @@
 							<br>
 							<img class="img-responsive img-rounded img-centered" src="img/bedroom-good.jpg" alt="Screencap of the Dementia Friendly Home app.">
 							<br>
-							<p class="text-justify"><a href="https://vic.fightdementia.org.au/vic/3d-%E2%80%98dementia-friendly-home%E2%80%99-app-to-assist-carers-and-empower-people-living-with-dementia" class="dark" target="_blank">Alzheimer’s Australia</a> engaged us to develop an app to educate carers about Dementia Enabling Environment Principles through manipulation of a 3D modelled home. These changes can be effected with annotated rationale and consequences to allow people living with dementia to maintain their independence at home.
+							<p class="text-justify"><a href="https://vic.fightdementia.org.au/vic/3d-%E2%80%98dementia-friendly-home%E2%80%99-app-to-assist-carers-and-empower-people-living-with-dementia" class="dark" target="_blank">Alzheimer’s Australia</a> engaged us to develop an app to educate carers about Dementia Enabling Environment Principles through manipulation of a 3D modelled home. These changes can be effected with annotated rationale and consequences to allow people living with dementia to maintain their independence at home.</p>
+							<br>
+							<br>
+							<p class="text-justify">I performed heuristic evaluations and ran usability tests for this app. Our primary users were identified to be family members and carers of persons living with dementia. The primary goal of this app enabled users to understand the effects of positive furnishing changes that could be made to their households. We invested significant time in refining the user experience as our primary users were typically only moderately proficient with tablet usage, and typically not proficient with 3D exploration that is more commonly used in games.</p>
 							<br>
 							<br>
 							<p class="text-justify">Store pages: <a href="https://play.google.com/store/apps/details?id=au.com.alzheimersaustraliavic.dementiafriendlyhome&hl=en" class="dark" target="_blank"><i class="fa fa-fw fa-android"></i></a> <a href="https://itunes.apple.com/au/app/the-dementia-friendly-home/id1051978132?mt=8" class="dark" target="_blank"><i class="fa fa-fw fa-apple"></i></a></p>
@@ -314,7 +282,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="portfolio-modal modal fade" id="trr" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-content">
 			<div class="close-modal" data-dismiss="modal">
 				<div class="lr">
@@ -333,7 +301,10 @@
 							<br>
 							<img class="img-responsive img-rounded img-centered" src="img/trr.jpg" alt="Dr Joseph Mathew showing Dr Felix Tan and I around in the trauma bays.">
 							<br>
-							<p class="text-justify">The <a href="http://www.trrproject.com/" class="dark" target="_blank">Trauma Reception & Resuscitation</a> project is a Decision Support System built at the SSIL for The Alfred’s Trauma Centre. This system also enabled the end users enrichment capability over the algorithmic knowledge base. </p>
+							<p class="text-justify">The <a href="http://www.trrproject.com/" class="dark" target="_blank">Trauma Reception & Resuscitation</a> project is a Decision Support System built at the SSIL for The Alfred’s Trauma Centre. This system is currently deployed in the Trauma Bays of The Alfred and also enables the trauma team the capability to enrich the algorithmic knowledge base of the system with minor training.</p>
+							<br>
+							<br>
+							<p class="text-justify">Users have noted the affordance for greater accountability during surgery. Additionally, the display of timeline since arrival and procedures performed provided the team members critical contextual information that augments the patient's current vital signs, especially when arriving in the bay separately.</p>
 							<br>
 							<br>
 							<p class="text-justify">Since deployment, an 80% reduction in blood administered to patients, 21% reduction in errors of omission and 3 hours less time spent in trauma have been observed. I produced one <a href="https://aut.researchgateway.ac.nz/handle/10292/8160" class="dark" target="_blank">conference</a> and one <a href="http://journal.acs.org.au/index.php/ajis/article/viewFile/1146/701" class="dark" target="_blank">journal</a> publication about affordances enabled by this system.</p>
@@ -346,7 +317,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="portfolio-modal modal fade" id="seacow" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-content">
 			<div class="close-modal" data-dismiss="modal">
 				<div class="lr">
@@ -375,9 +346,7 @@
 			</div>
 		</div>
 	</div>
-
-	<!-- Research Modals -->
-	<div class="research-modal modal fade" id="researchModal1" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="portfolio-modal modal fade" id="phd" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-content">
 			<div class="close-modal" data-dismiss="modal">
 				<div class="lr">
@@ -389,7 +358,7 @@
 				<div class="row">
 					<div class="col-lg-8 col-lg-offset-2">
 						<div class="modal-body">
-							<h3 class="text-center">PhD</h3>
+							<h3 class="text-center">Extracting Signal from the Noise of App Reviews</h3>
 							<hr class="star-primary">
 							<br>
 							<h4 style="text-align:center;">From my thesis: <a href="https://researchbank.swinburne.edu.au/items/9dba0058-17e2-4c31-8f0d-fb0a0e8248cd/1/" class="dark" target="_blank">Extracting Signal from the Noise of App Reviews</a></h4>
@@ -415,7 +384,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="research-modal modal fade" id="researchModal2" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="portfolio-modal modal fade" id="publications" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-content">
 			<div class="close-modal" data-dismiss="modal">
 				<div class="lr">
@@ -427,10 +396,11 @@
 				<div class="row">
 					<div class="col-lg-8 col-lg-offset-2">
 						<div class="modal-body">
-							<h3 class="text-center">App Review Analysis</h3>
+							<h3 class="text-center">Publications</h3>
 							<hr class="star-primary">
 							<br>
-							<ul class="item-details">
+							<h4>App Review Analysis</h4>
+							<ul class="item-details text-justify">
 								<li>
 									Hoon, L., Stojmenovic, M., Vasa, R., Farrell, G. “Spreading Word: Author Frequency of App Reviews,” 2016. <a href="http://dl.acm.org/citation.cfm?id=3011850" class="dark" target="_blank"><i class="fa fa-fw fa-external-link"></i></a>
 								</li>
@@ -460,31 +430,8 @@
 								</li>
 							</ul>
 							<br>
-							<br>
-							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="research-modal modal fade" id="researchModal3" tabindex="-1" role="dialog" aria-hidden="true">
-		<div class="modal-content">
-			<div class="close-modal" data-dismiss="modal">
-				<div class="lr">
-					<div class="rl">
-					</div>
-				</div>
-			</div>
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-8 col-lg-offset-2">
-						<div class="modal-body">
-							<h3 class="text-center">Other Research</h3>
-							<hr class="star-primary">
-							<br>
 							<h4>Healthcare Information Systems</h4>
-							<ul class="item-details">
+							<ul class="item-details text-justify">
 								<li>
 									Hoon, L., Tan, F.T.C., Vasa, R., Mouzakis, K., Fitzgerald, M. “ICT-Enabled Time-Critical Clinical Practices: Examining the Affordances of an Information Processing Solution,” 2015. <a href="http://journal.acs.org.au/index.php/ajis/article/viewFile/1146/701" class="dark" target="_blank"><i class="fa fa-fw fa-external-link"></i></a>
 								</li>
@@ -493,9 +440,8 @@
 								</li>
 							</ul>
 							<br>
-							<br>
 							<h4>Human-Computer Interaction</h4>
-							<ul class="item-details">
+							<ul class="item-details text-justify">
 								<li>
 									Stojmenovic, M., Grundy, J., Farrell, V., Biddle, R., Hoon, L. “Does Textual Word-of-Mouth Affect Look and Feel?” 2016. <a href="http://dl.acm.org/citation.cfm?id=3010926" class="dark" target="_blank"><i class="fa fa-fw fa-external-link"></i></a>
 								</li>
@@ -504,38 +450,12 @@
 								</li>
 							</ul>
 							<br>
-							<br>
 							<h4>Software Evolution</h4>
-							<ul class="item-details">
+							<ul class="item-details text-justify">
 								<li>
 									Schneider, J.-G., Vasa, R., Hoon, L. "Do Metrics Help to Identify Refactoring?,” 2010. <a href="http://dl.acm.org/citation.cfm?id=1862377" class="dark" target="_blank"><i class="fa fa-fw fa-external-link"></i></a>
 								</li>
 							</ul>
-							<br>
-							<br>
-							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="research-modal modal fade" id="researchModal4" tabindex="-1" role="dialog" aria-hidden="true">
-		<div class="modal-content">
-			<div class="close-modal" data-dismiss="modal">
-				<div class="lr">
-					<div class="rl">
-					</div>
-				</div>
-			</div>
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-8 col-lg-offset-2">
-						<div class="modal-body">
-							<h4>Human-Computer Interaction</h4> and Software Evolution</h4>
-							<hr class="star-primary">
-							<br>
-
 							<br>
 							<br>
 							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
