Added Dora as a placeholder.

--- a/startbootstrap-resume-gh-pages/index.html
+++ b/startbootstrap-resume-gh-pages/index.html
@@ -180,7 +180,7 @@
               <div class="subheading mb-3">Deakin Applied Artificial Intelligence Institute (A2I2, formerly DSTIL)</br>
               Involvement: Project Manager, Delivery Lead</div>
 
-              <img class="img-responsive" src="img/dyn-price.gif" alt="Dynamic Pricing results.">
+              <img class="img-responsive" src="../img/dora.jpeg" alt="Dynamic Pricing results.">
               </br>
               <p>The Intellectual Property for this was purchased by <a href="https://www.daisee.com/" target="_blank">Daisee</a>.</p>
             </div>
@@ -192,7 +192,7 @@
               <div class="subheading mb-3">Deakin Applied Artificial Intelligence Institute (A2I2, formerly DSTIL)</br>
               Involvement: Product Design, Product and Project Manager</div>
 
-              <img class="img-responsive" src="img/dyn-price.gif" alt="Dynamic Pricing results.">
+              <img class="img-responsive" src="../img/dora.jpeg" alt="Dynamic Pricing results.">
               </br>
               <p>The Intellectual Property for this was purchased by <a href="https://www.daisee.com/" target="_blank">Daisee</a>.</p>
             </div>
@@ -204,7 +204,7 @@
               <div class="subheading mb-3">Deakin Software and Technology Innovation Lab (DSTIL)</br>
               Involvement: Solution Architecture, Delivery Lead</div>
 
-              <img class="img-responsive" src="img/dyn-price.gif" alt="Dynamic Pricing results.">
+              <img class="img-responsive" src="../img/dora.jpeg" alt="Dynamic Pricing results.">
               </br>
               <p>.</p>
             </div>
@@ -330,7 +330,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-            <p>Apart from my work with product and project management, I am an avid archer and musician. In the archery arena, I'm a proud member of Box Hill City Archers club and currently shoot both outdoor barebow recurve and olympic target recurve.</p>
+            <p>Apart from my work with product and project management, I am an avid archer and musician. In the archery arena, I'm a proud member of the <a href="http://www.bhca.net.au" target="_blank">Box Hill City Archers</a> club and currently shoot both outdoor barebow recurve and olympic target recurve.</p>
             <p>I used to be a gigging bassist and guitarist, depending on the needs of the band for the particular gig. My preference was for weekend afternoon cafe gigs. For now, I'm reinventing my technique and expanding my knowledge of music theory by taking lessons again.</p>
             <p>I also enjoy carpentry. Specifically, luthiery, which is the construction of guitars. Unfortunately, I am an apartment dweller without a garage, which puts a damper on this hobby. Besides, my free-loading house mate (she's a cat) would likely disapprove of the noise.</p>
         </div>
