Added urls to Dstil and cover genius.

--- a/startbootstrap-resume-gh-pages/index.html
+++ b/startbootstrap-resume-gh-pages/index.html
@@ -119,8 +119,8 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Technical Product Manager</h3>
-              <div class="subheading mb-3">Deakin Applied Artificial Intelligence Institute (previously Deakin Software and Technology Innovation Lab)</div>
-              <p>Stuff about A2I2.</p>
+              <div class="subheading mb-3">Deakin Applied Artificial Intelligence Institute (A&sup2;I&sup2;)</div>
+              <p>I am currently a Technical Product Manager with <a href="https://dstil.com.au/" target="_blank">A&sup2;I&sup2;</a>, previously known as the Deakin Software and Technology Innovation Lab (DSTIL).</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">July 2017 - Present</span>
@@ -131,7 +131,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Data Science Lead</h3>
               <div class="subheading mb-3">Cover Genius</div>
-              <p>After completing my PhD, I joined the team at Cover Genius to apply my data analytics skills to price optimisation. I use cutting-edge machine intelligence to dynamically price an insurance product based on a customer's needs. Our algorithms process data from many different sources to come up with pricing strategies which we evaluate using Yesterday's Weather.</p>
+              <p>After completing my PhD, I joined the team at <a href="http://www.covergenius.biz/" target="_blank">Cover Genius</a> to apply my data analytics skills to price optimisation. I use cutting-edge machine intelligence to dynamically price an insurance product based on a customer's needs. Our algorithms process data from many different sources to come up with pricing strategies which we evaluate using Yesterday's Weather.</p>
               </br>
               <p>I owned:</p>
               <ul class="ul-justify">
