Further refinement of the About me.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </h1>
           <div class="subheading mb-5">Melbourne, Victoria, Australia · <a href="mailto:lh@leonardhoon.com?Subject=Hello%20from%20your%20website">lh@leonardhoon.com</a>
           </div>
-          <p class="mb-5">I believe in value creation, not value extraction. I employ my diverse skill-set to take ideas through discovery, design and delivery phases for a range of domains, with and without artificial intelligence to enhance businesses.</p>
+          <p class="mb-5">Hi, how are you? I'm a product manager for AI and tech solutions, employing my diverse skill-set to take ideas through discovery, design and delivery across myriad domains to enhance businesses.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="http://au.linkedin.com/in/leonardhoon/" target="_blank">
