Trimmed down the content verbosity.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </h1>
           <div class="subheading mb-5">Melbourne, Victoria, Australia · <a href="mailto:lh@leonardhoon.com?Subject=Hello%20from%20your%20website">lh@leonardhoon.com</a>
           </div>
-          <p class="mb-5">Hi, how are you? I'm a product manager for AI and tech solutions, employing my diverse skill-set to take ideas through discovery, design and delivery across myriad domains to enhance businesses.</p>
+          <p class="mb-5">I enhance businesses by discovering, designing and delivering solutions.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="http://au.linkedin.com/in/leonardhoon/" target="_blank">
@@ -106,7 +106,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Technical Product Manager</h3>
               <div class="subheading mb-3">Deakin Applied Artificial Intelligence Institute (A&sup2;I&sup2;)</div>
-              <p>I am responsible for managing client relationships, solution discovery, project budgets and orchestration of the data science and software engineering efforts to deliver solutions within the project constraints at <a href="https://dstil.com.au/" target="_blank">A&sup2;I&sup2;</a>, previously known as the Deakin Software and Technology Innovation Lab (DSTIL).</p>
+              <p>At <a href="https://dstil.com.au/" target="_blank">A&sup2;I&sup2;</a>, previously known as DSTIL, I manage client relationships, discover requirements and orchestrate data science and software engineering efforts to deliver solutions for clients.</p>
               </br>
               <p>We successfully delivered:</p>
               <ul class="ul-justify">
@@ -117,9 +117,9 @@
               </br>
               <p>I also assist <a href="http://allplaysports.org.au/" target="_blank">AllPlay</a> as their technical manager. AllPlay is an international program that fosters inclusion for children with disabilities to play, learn, dance and connect with their community. The AllPlay programs are:</p>
               <ul class="ul-justify">
-                <li><a href="https://allplayfooty.org.au/" target="_blank">AllPlay Footy<a>, fostering inclusion for <a href="http://www.aflauskick.com.au/" target="_blank">NAB AFL Auskick</a>. This is funded by the Moose Foundation and the NDIS, to educate coaches, parents and players of all abilities.</li>
-                <li><a href="https://allplayfooty.org.au/" target="_blank">AllPlay BettaFooty</a> expands AllPlay Footy to encourage indigenous children to participate in <a href="http://www.aflauskick.com.au/" target="_blank">NAB AFL Auskick</a>. This is funded by the Moose Foundation and the NDIS through the Information, Linkages and Capacity Building (ILC) National Readiness Grants.</li>
-                <li><a href="http://allplaydance.org.au/" target="_blank">AllPlay Dance</a> is funded by the NDIS through the Information, Linkages and Capacity Building (ILC) National Readiness Grants, enabling children with disabilities and developmental challenges to access dance.</li>
+                <li><a href="https://allplayfooty.org.au/" target="_blank">AllPlay Footy<a> for <a href="http://www.aflauskick.com.au/" target="_blank">NAB AFL Auskick</a> educates coaches, parents and players of all abilities.</li>
+                <li><a href="https://allplayfooty.org.au/" target="_blank">AllPlay BettaFooty</a> expands AllPlay Footy to encourage indigenous children to participate in <a href="http://www.aflauskick.com.au/" target="_blank">NAB AFL Auskick</a>.</li>
+                <li><a href="http://allplaydance.org.au/" target="_blank">AllPlay Dance</a> enables children with disabilities and developmental challenges to access dance.</li>
               </ul>
             </div>
             <div class="resume-date text-md-right">
