Further text content refinement.

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               <h3 class="mb-0">Ekko Duplex Transcript Analysis</h3>
               <div class="subheading mb-3">Deakin Applied Artificial Intelligence Institute (A&sup2;I&sup2;, formerly DSTIL)</br>
               Involvement: Project Manager, Delivery Lead</div>
-              <p>Ekko is a solution that supports customer service quality management. It is stateless, supporting on-prem or cloud deployment and employs Natural Language Processing and statistical analysis to examine agent and customer channel separated (duplex) transcripts. Ekko offers topic inference, sentiment scoring and statistical properties of transcripts and is designed to afford analysis from the agent, customer or conversation level view.</p>
+              <p>Ekko is our solution to support customer service quality management. It is stateless, supporting on-prem or cloud deployment and employs Natural Language Processing and statistical analysis to examine agent and customer channel separated (duplex) transcripts. Ekko offers topic inference, sentiment scoring and statistical properties of transcripts and is designed to afford analysis from the agent, customer or conversation level view.</p>
             </div>
           </div>
 
@@ -188,7 +188,7 @@
               <h3 class="mb-0">Maestro AI Platform (v1)</h3>
               <div class="subheading mb-3">Deakin Applied Artificial Intelligence Institute (A&sup2;I&sup2;, formerly DSTIL)</br>
               Involvement: Product Design, Product and Project Manager</div>
-              <p>Maestro, is a holistic Artificial Intelligence platform that can productionise a Jupyter Notebook into a live Amazon Web Service instance in minutes. Maestro also includes project management approaches that guide discovery and exploration. It also features data provenance and is our first effort to offer explainable Artificial Intelligence.</p>
+              <p>Maestro was designed to accelerate our efforts and consistency across multiple domains. It is a holistic platform that can productionise a Jupyter Notebook into a live Amazon Web Service instance in minutes. Maestro also includes project management approaches that guide discovery and exploration. It also features data provenance and is our first effort to offer explainable Artificial Intelligence.</p>
             </div>
           </div>
 
@@ -206,9 +206,6 @@
               <h3 class="mb-0">Dynamic Pricing</h3>
               <div class="subheading mb-3">Cover Genius</br>
               Involvement: Data Scientist, Software Engineer</div>
-
-              <!-- <img class="img-responsive" src="img/dyn-price.gif" alt="Dynamic Pricing results.">
-              </br> -->
               <p>At <a href="http://www.covergenius.biz/" target="_blank">Cover Genius</a>, we designed and launched the world's first dynamic pricing engine for rental car insurance. Running off our bespoke A/B and Multivariate testing framework, this system helped us detect pricing sensitivity across individual variables. In effect, we raised B2C and B2B conversion, increasing gross revenue by 15%.</p>
             </div>
           </div>
@@ -218,13 +215,7 @@
               <h3 class="mb-0">The Dementia Friendly Home</h3>
               <div class="subheading mb-3">Deakin Software and Technology Innovation Laboratory (DSTIL)</br>
               Involvement: Usability Analyst (version 1)</div>
-
-              <!-- <img class="img-responsive" src="img/bedroom-good.jpg" alt="Screencap of the Dementia Friendly Home app.">
-              </br> -->
               <p><a href="https://vic.fightdementia.org.au/vic/3d-%E2%80%98dementia-friendly-home%E2%80%99-app-to-assist-carers-and-empower-people-living-with-dementia" target="_blank">Alzheimer’s Australia</a> engaged us to develop an app to educate carers about Dementia Enabling Environment Principles through manipulation of a 3D modelled home. These changes can be effected with annotated rationale and consequences to allow people living with dementia to maintain their independence at home.</p>
-
-              <!-- <p>I performed heuristic evaluations and ran usability tests for this app. Our primary users were identified to be family members and carers of persons living with dementia. The primary goal of this app enabled users to understand the effects of positive furnishing changes that could be made to their households. We invested significant time in refining the user experience as our primary users were typically only moderately proficient with tablet usage, and typically not proficient with 3D exploration that is more commonly used in games.</p> -->
-
               <p>Store pages: <a href="https://play.google.com/store/apps/details?id=au.com.alzheimersaustraliavic.dementiafriendlyhome&hl=en" target="_blank"><i class="fa fa-fw fa-android"></i></a> <a href="https://itunes.apple.com/au/app/the-dementia-friendly-home/id1051978132?mt=8" target="_blank"><i class="fa fa-fw fa-apple"></i></a></p>
             </div>
           </div>
@@ -234,14 +225,7 @@
               <h3 class="mb-0">Trauma Reception and Resuscitation</h3>
               <div class="subheading mb-3">Swinburne NICTA Software Innovation Lab (SSIL)</br>
               Involvement: Usability Researcher</div>
-
-              <!-- <img class="img-responsive" src="img/trr.jpg" alt="Dr Joseph Mathew showing Dr Felix Tan and I around in the trauma bays.">
-              <br> -->
-              <p>The <a href="http://www.trrproject.com/" class="dark" target="_blank">Trauma Reception and Resuscitation</a> project is a Decision Support System built at the SSIL for The Alfred's Trauma Centre. Since deployment, an 80% reduction in blood administered to patients, 21% reduction in errors of omission and 3 hours less time spent in trauma have been observed. I produced one <a href="https://aut.researchgateway.ac.nz/handle/10292/8160" target="_blank">conference</a> and one <a href="http://journal.acs.org.au/index.php/ajis/article/viewFile/1146/701" target="_blank">journal</a> publication about affordances enabled by this system.</p><!--  This system is currently deployed in the Trauma Bays of The Alfred and also enables the trauma team the capability to enrich the algorithmic knowledge base of the system with minor training.</p>
-
-              <p>Users have noted the affordance for greater accountability during surgery. Additionally, the display of timeline since arrival and procedures performed provided the team members critical contextual information that augments the patient's current vital signs, especially when arriving in the bay separately.</p> -->
-
-              <!-- <p>Since deployment, an 80% reduction in blood administered to patients, 21% reduction in errors of omission and 3 hours less time spent in trauma have been observed. I produced one <a href="https://aut.researchgateway.ac.nz/handle/10292/8160" target="_blank">conference</a> and one <a href="http://journal.acs.org.au/index.php/ajis/article/viewFile/1146/701" target="_blank">journal</a> publication about affordances enabled by this system.</p> -->
+              <p>The <a href="http://www.trrproject.com/" class="dark" target="_blank">Trauma Reception and Resuscitation</a> project is a Decision Support System built at the SSIL for The Alfred's Trauma Centre. Since deployment, an 80% reduction in blood administered to patients, 21% reduction in errors of omission and 3 hours less time spent in trauma have been observed. I produced one <a href="https://aut.researchgateway.ac.nz/handle/10292/8160" target="_blank">conference</a> and one <a href="http://journal.acs.org.au/index.php/ajis/article/viewFile/1146/701" target="_blank">journal</a> publication about affordances enabled by this system.</p>
             </div>
           </div>
 
@@ -249,11 +233,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Extracting Signal from the Noise of App Reviews</h3>
               <div class="subheading mb-3">Swinburne University of Technology</div>
-
-              <!-- <img class="img-responsive" src="img/phd.png" alt="Screengrab of one the heatmaps from my PhD thesis.">
-              </br> -->
               <p>My thesis <a href="https://researchbank.swinburne.edu.au/items/9dba0058-17e2-4c31-8f0d-fb0a0e8248cd/1/" target="_blank">Extracting Signal from the Noise of App Reviews</a> uses statistical and text analysis on 8.7 million app reviews to demonstrate that the majority of reviews, when read in isolation, do not yield developers much actionable feedback. Reviews are analysed to offer app benchmarking, search space reduction techniques and typical review properties to detect and sort useful reviews, toward informing project expectations, priorities and scoping.</p>
-              <!-- <p>Brief abstract from my PhD thesis: <a href="https://researchbank.swinburne.edu.au/items/9dba0058-17e2-4c31-8f0d-fb0a0e8248cd/1/" target="_blank">Extracting Signal from the Noise of App Reviews</a>: Apps stores offer a transparent feedback loop between users and developers via public app reviews and direct distribution of updates to users. Significant effort is expended to glean useful information from reviews and to examine this feedback loop. This thesis uses statistical and text analysis on 8.7 million reviews to demonstrate that the majority of reviews, when read in isolation, do not yield developers much actionable feedback. Reviews are analysed to offer app benchmarking, search space reduction techniques and typical review properties to detect and sort useful reviews, toward informing project expectations, priorities and scoping.</p> -->
             </div>
           </div>
         </div>
