--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
               </br>
               <p>We successfully delivered:</p>
               <ul class="ul-justify">
-                <li>Ekko, a solution to customer service quality management using Natural Language Processing and statistical analysis.</li>
-                <li>Maestro, a holistic Artificial Intelligence platform to enable consistent bootstrapping and deployment of artificial intelligence solutions.</li>
-                <li>Pluto, a stateless micro service that employs Feature Extraction and Time Series analysis to predict catastrophic price drops in the  financial market. </li>
+                <li><a class="js-scroll-trigger" href="#ekko">Ekko</a>, a solution to customer service quality management using Natural Language Processing and statistical analysis.</li>
+                <li><a class="js-scroll-trigger" href="#maestro">Maestro</a>, a holistic Artificial Intelligence platform to enable consistent bootstrapping and deployment of artificial intelligence solutions.</li>
+                <li><a class="js-scroll-trigger" href="#pluto">Pluto</a>, a stateless micro service that employs Feature Extraction and Time Series analysis to predict catastrophic price drops in the  financial market. </li>
               </ul>
               </br>
               <p>I also assist <a href="http://allplaysports.org.au/" target="_blank">AllPlay</a> as their technical manager. AllPlay is an international program that fosters inclusion for children with disabilities to play, learn, dance and connect with their community. The AllPlay programs are:</p>
@@ -143,6 +143,7 @@
               </br>
               <p>I also got to architect, design, implement and ship:</p>
               <ul class="ul-justify">
+                <li><a class="js-scroll-trigger" href="#dyn-pricing">Dynamic Pricing</a> that adjusts prices for products based multiple features ranging from geography to perceived propensity to convert.</li>
                 <li>AWS cloud infrastructure for data ingestion, storage and processing (ETL) pipeline</li>
                 <li>Data consumption and reporting outlets for internal and external customers</li>
                 <li>Embedded A/B testing, dynamic pricing module micro-service dynamic pricing server for internal and API systems, raising gross revenue by 15%, by studying and segmenting customers and products</li>
@@ -159,7 +160,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Fellow</h3>
               <div class="subheading mb-3">Swinburne NICTA Software Innovation Lab</div>
-              <p>I worked with clients such as Alzheimer's Australia to identify primary users and goals for their project, organised and ran tests for the usability and user experience for the 'Dementia Friendly Home App' (v1.0). Additionally, I applied my PhD research to evaluate app portfolios for acquisition due diligence. Lastly, I lead cross-disciplinary research efforts to produce research publications for the lab.</p>
+              <p>I worked with clients such as Alzheimer's Australia to identify primary users and goals for their project, organised and ran tests for the usability and user experience for the <a class="js-scroll-trigger" href="#dementia">Dementia Friendly Home App</a> (v1.0). Additionally, I lead cross-disciplinary research efforts to produce research publications for the lab for the <a class="js-scroll-trigger" href="#trr">Trauma Reception and Resuscitation</a> project. Lastly, I applied my PhD research to evaluate app portfolios for acquisition due diligence.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2013 - December 2015</span>
@@ -173,9 +174,10 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
-
+        
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <span id="ekko" class="anchor"></span>
               <h3 class="mb-0">Ekko Duplex Transcript Analysis</h3>
               <div class="subheading mb-3">Deakin Applied Artificial Intelligence Institute (A&sup2;I&sup2;, formerly DSTIL)</br>
               Involvement: Project Manager, Delivery Lead</div>
@@ -185,6 +187,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <span id="maestro" class="anchor"></span>
               <h3 class="mb-0">Maestro AI Platform (v1)</h3>
               <div class="subheading mb-3">Deakin Applied Artificial Intelligence Institute (A&sup2;I&sup2;, formerly DSTIL)</br>
               Involvement: Product Design, Product and Project Manager</div>
@@ -194,6 +197,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <span id="pluto" class="anchor"></span>
               <h3 class="mb-0">Pluto Financial Predictor</h3>
               <div class="subheading mb-3">Deakin Software and Technology Innovation Lab (DSTIL)</br>
               Involvement: Solution Architecture, Delivery Lead</div>
@@ -203,6 +207,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <span id="dyn-pricing" class="anchor"></span>
               <h3 class="mb-0">Dynamic Pricing</h3>
               <div class="subheading mb-3">Cover Genius</br>
               Involvement: Data Scientist, Software Engineer</div>
@@ -212,6 +217,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <span id="dementia" class="anchor"></span>
               <h3 class="mb-0">The Dementia Friendly Home</h3>
               <div class="subheading mb-3">Deakin Software and Technology Innovation Laboratory (DSTIL)</br>
               Involvement: Usability Analyst (version 1)</div>
@@ -222,6 +228,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <span id="trr" class="anchor"></span>
               <h3 class="mb-0">Trauma Reception and Resuscitation</h3>
               <div class="subheading mb-3">Swinburne NICTA Software Innovation Lab (SSIL)</br>
               Involvement: Usability Researcher</div>
