--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Fellow</h3>
               <div class="subheading mb-3">Swinburne NICTA Software Innovation Lab</div>
-              <p>I worked with clients such as Alzheimer's Australia to identify primary users and goals for their project, organised and ran tests for the usability and user experience for the <a class="js-scroll-trigger" href="#dementia">Dementia Friendly Home App</a> (v1.0). Additionally, I lead cross-disciplinary research efforts to produce research publications for the lab for the <a class="js-scroll-trigger" href="#trr">Trauma Reception and Resuscitation</a> project. Lastly, I applied my PhD research to evaluate app portfolios for acquisition due diligence.</p>
+              <p>I worked with clients such as Alzheimer's Australia to identify primary users and goals for their project, organised and ran tests for the usability and user experience for the <a class="js-scroll-trigger" href="#dementia">Dementia Friendly Home App</a> (v1.0). </p>
+              <p>I lead cross-disciplinary research efforts to produce research publications for the lab for the <a class="js-scroll-trigger" href="#trr">Trauma Reception and Resuscitation</a> project. </p>
+              <p>Lastly, I applied my PhD research to evaluate app portfolios for acquisition due diligence.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2013 - December 2015</span>
