--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Technical Product Manager</h3>
               <div class="subheading mb-3">Deakin Applied Artificial Intelligence Institute (A&sup2;I&sup2;)</div>
-              <p>At <a href="https://dstil.com.au/" target="_blank">A&sup2;I&sup2;</a>, previously known as DSTIL, I manage client relationships, discover requirements and orchestrate data science and software engineering efforts to deliver solutions for clients.</p>
+              <p>At <a href="https://dstil.com.au/" target="_blank">A&sup2;I&sup2; <span class="fa fa-fw fa-external-link small"></span></a>, previously known as DSTIL, I manage client relationships, discover requirements and orchestrate data science and software engineering efforts to deliver solutions for clients.</p>
               </br>
               <p>We successfully delivered:</p>
               <ul class="ul-justify">
@@ -112,11 +112,11 @@
                 <li><a class="js-scroll-trigger" href="#pluto">Pluto</a>, a stateless micro service that employs Feature Extraction and Time Series analysis to predict catastrophic price drops in the  financial market. </li>
               </ul>
               </br>
-              <p>I also assist <a href="http://allplaysports.org.au/" target="_blank">AllPlay</a> as their technical manager. AllPlay is an international program that fosters inclusion for children with disabilities to play, learn, dance and connect with their community. The AllPlay programs are:</p>
+              <p>I also assist <a href="http://allplaysports.org.au/" target="_blank">AllPlay <span class="fa fa-fw fa-external-link small"></span></a> as their technical manager. AllPlay is an international program that fosters inclusion for children with disabilities to play, learn, dance and connect with their community. The AllPlay programs are:</p>
               <ul class="ul-justify">
-                <li><a href="https://allplayfooty.org.au/" target="_blank">AllPlay Footy<a> for <a href="http://www.aflauskick.com.au/" target="_blank">NAB AFL Auskick</a> educates coaches, parents and players of all abilities.</li>
-                <li><a href="https://allplayfooty.org.au/" target="_blank">AllPlay BettaFooty</a> expands AllPlay Footy to encourage indigenous children to participate in <a href="http://www.aflauskick.com.au/" target="_blank">NAB AFL Auskick</a>.</li>
-                <li><a href="http://allplaydance.org.au/" target="_blank">AllPlay Dance</a> enables children with disabilities and developmental challenges to access dance.</li>
+                <li><a href="https://allplayfooty.org.au/" target="_blank">AllPlay Footy <span class="fa fa-fw fa-external-link small"></span><a> for <a href="http://www.aflauskick.com.au/" target="_blank">NAB AFL Auskick <span class="fa fa-fw fa-external-link small"></span></a> educates coaches, parents and players of all abilities.</li>
+                <li><a href="https://allplayfooty.org.au/" target="_blank">AllPlay BettaFooty <span class="fa fa-fw fa-external-link small"></span></a> expands AllPlay Footy to encourage indigenous children to participate in NAB AFL Auskick.</li>
+                <li><a href="http://allplaydance.org.au/" target="_blank">AllPlay Dance <span class="fa fa-fw fa-external-link small"></span></a> enables children with disabilities and developmental challenges to access dance.</li>
               </ul>
             </div>
             <div class="resume-date text-md-right">
@@ -128,7 +128,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Data Science Lead</h3>
               <div class="subheading mb-3">Cover Genius</div>
-              <p>After completing my PhD, I joined the team at <a href="http://www.covergenius.biz/" target="_blank">Cover Genius</a> to apply my data analytics skills to price optimisation. I use cutting-edge machine intelligence to dynamically price an insurance product based on a customer's needs. Our algorithms process data from many different sources to come up with pricing strategies which we evaluate using Yesterday's Weather.</p>
+              <p>After completing my PhD, I joined the team at <a href="http://www.covergenius.biz/" target="_blank">Cover Genius <span class="fa fa-fw fa-external-link small"></span></a> to apply my data analytics skills to price optimisation. I use cutting-edge machine intelligence to dynamically price an insurance product based on a customer's needs. Our algorithms process data from many different sources to come up with pricing strategies which we evaluate using Yesterday's Weather.</p>
               </br>
               <p>I owned:</p>
               <ul class="ul-justify">
@@ -157,7 +157,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Fellow</h3>
               <div class="subheading mb-3">Swinburne NICTA Software Innovation Lab</div>
-              <p>I worked with clients such as Alzheimer's Australia to identify primary users and goals for their project, organised and ran tests for the usability and user experience for the <a class="js-scroll-trigger" href="#dementia">Dementia Friendly Home App</a> (v1.0). </p>
+              <p>I worked with clients such as Alzheimer's Australia to identify primary users and goals for their project, organised and ran tests for the usability and user experience for the <a class="js-scroll-trigger" href="#dementia">Dementia Friendly Home App (v1.0)</a>. </p>
               <p>I lead cross-disciplinary research efforts to produce research publications for the lab for the <a class="js-scroll-trigger" href="#trr">Trauma Reception and Resuscitation</a> project. </p>
               <p>Lastly, I applied my PhD research to evaluate app portfolios for acquisition due diligence.</p>
             </div>
@@ -173,7 +173,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
-        
+
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <span id="ekko" class="anchor"></span>
@@ -210,7 +210,7 @@
               <h3 class="mb-0">Dynamic Pricing</h3>
               <div class="subheading mb-3">Cover Genius</br>
               Involvement: Data Scientist, Software Engineer</div>
-              <p>At <a href="http://www.covergenius.biz/" target="_blank">Cover Genius</a>, we designed and launched the world's first dynamic pricing engine for rental car insurance. Running off our bespoke A/B and Multivariate testing framework, this system helped us detect pricing sensitivity across individual variables. In effect, we raised B2C and B2B conversion, increasing gross revenue by 15%.</p>
+              <p>At <a href="http://www.covergenius.biz/" target="_blank">Cover Genius <span class="fa fa-fw fa-external-link small"></span></a>, we designed and launched the world's first dynamic pricing engine for rental car insurance. Running off our bespoke A/B and Multivariate testing framework, this system helped us detect pricing sensitivity across individual variables. In effect, we raised B2C and B2B conversion, increasing gross revenue by 15%.</p>
             </div>
           </div>
 
@@ -220,7 +220,7 @@
               <h3 class="mb-0">The Dementia Friendly Home</h3>
               <div class="subheading mb-3">Deakin Software and Technology Innovation Laboratory (DSTIL)</br>
               Involvement: Usability Analyst (version 1)</div>
-              <p><a href="https://vic.fightdementia.org.au/vic/3d-%E2%80%98dementia-friendly-home%E2%80%99-app-to-assist-carers-and-empower-people-living-with-dementia" target="_blank">Alzheimer’s Australia</a> engaged us to develop an app to educate carers about Dementia Enabling Environment Principles through manipulation of a 3D modelled home. These changes can be effected with annotated rationale and consequences to allow people living with dementia to maintain their independence at home.</p>
+              <p><a href="https://vic.fightdementia.org.au/vic/3d-%E2%80%98dementia-friendly-home%E2%80%99-app-to-assist-carers-and-empower-people-living-with-dementia" target="_blank">Alzheimer’s Australia <span class="fa fa-fw fa-external-link small"></span></a> engaged us to develop an app to educate carers about Dementia Enabling Environment Principles through manipulation of a 3D modelled home. These changes can be effected with annotated rationale and consequences to allow people living with dementia to maintain their independence at home.</p>
               <p>Store pages: <a href="https://play.google.com/store/apps/details?id=au.com.alzheimersaustraliavic.dementiafriendlyhome&hl=en" target="_blank"><i class="fa fa-fw fa-android"></i></a> <a href="https://itunes.apple.com/au/app/the-dementia-friendly-home/id1051978132?mt=8" target="_blank"><i class="fa fa-fw fa-apple"></i></a></p>
             </div>
           </div>
@@ -231,7 +231,7 @@
               <h3 class="mb-0">Trauma Reception and Resuscitation</h3>
               <div class="subheading mb-3">Swinburne NICTA Software Innovation Lab (SSIL)</br>
               Involvement: Usability Researcher</div>
-              <p>The <a href="http://www.trrproject.com/" class="dark" target="_blank">Trauma Reception and Resuscitation</a> project is a Decision Support System built at the SSIL for The Alfred's Trauma Centre. Since deployment, an 80% reduction in blood administered to patients, 21% reduction in errors of omission and 3 hours less time spent in trauma have been observed. I produced one <a href="https://aut.researchgateway.ac.nz/handle/10292/8160" target="_blank">conference</a> and one <a href="http://journal.acs.org.au/index.php/ajis/article/viewFile/1146/701" target="_blank">journal</a> publication about affordances enabled by this system.</p>
+              <p>The <a href="http://www.trrproject.com/" class="dark" target="_blank">Trauma Reception and Resuscitation <span class="fa fa-fw fa-external-link small"></span></a> project is a Decision Support System built at the SSIL for The Alfred's Trauma Centre. Since deployment, an 80% reduction in blood administered to patients, 21% reduction in errors of omission and 3 hours less time spent in trauma have been observed. I produced one <a href="https://aut.researchgateway.ac.nz/handle/10292/8160" target="_blank">conference <span class="fa fa-fw fa-external-link small"></span></a> and one <a href="http://journal.acs.org.au/index.php/ajis/article/viewFile/1146/701" target="_blank">journal <span class="fa fa-fw fa-external-link small"></span></a> publication about affordances enabled by this system.</p>
             </div>
           </div>
 
@@ -239,7 +239,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Extracting Signal from the Noise of App Reviews</h3>
               <div class="subheading mb-3">Swinburne University of Technology</div>
-              <p>My thesis <a href="https://researchbank.swinburne.edu.au/items/9dba0058-17e2-4c31-8f0d-fb0a0e8248cd/1/" target="_blank">Extracting Signal from the Noise of App Reviews</a> uses statistical and text analysis on 8.7 million app reviews to demonstrate that the majority of reviews, when read in isolation, do not yield developers much actionable feedback. Reviews are analysed to offer app benchmarking, search space reduction techniques and typical review properties to detect and sort useful reviews, toward informing project expectations, priorities and scoping.</p>
+              <p>My thesis <a href="https://researchbank.swinburne.edu.au/items/9dba0058-17e2-4c31-8f0d-fb0a0e8248cd/1/" target="_blank">Extracting Signal from the Noise of App Reviews <span class="fa fa-fw fa-external-link small"></span></a> uses statistical and text analysis on 8.7 million app reviews to demonstrate that the majority of reviews, when read in isolation, do not yield developers much actionable feedback. Reviews are analysed to offer app benchmarking, search space reduction techniques and typical review properties to detect and sort useful reviews, toward informing project expectations, priorities and scoping.</p>
             </div>
           </div>
         </div>
@@ -386,7 +386,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-            <p>Apart from my work with product and project management, I am an avid archer and musician. In the archery arena, I'm a proud member of the <a href="http://www.bhca.net.au" target="_blank">Box Hill City Archers</a> club and currently shoot both outdoor barebow recurve and olympic target recurve.</p>
+            <p>Apart from my work with product and project management, I am an avid archer and musician. In the archery arena, I'm a proud member of the <a href="http://www.bhca.net.au" target="_blank">Box Hill City Archers <span class="fa fa-fw fa-external-link small"></span></a> club and currently shoot both outdoor barebow recurve and olympic target recurve.</p>
             <p>I used to be a gigging bassist and guitarist, depending on the needs of the band for the particular gig. My preference was for weekend afternoon cafe gigs. For now, I'm reinventing my technique and expanding my knowledge of music theory by taking lessons again.</p>
             <p>I also enjoy carpentry. Specifically, luthiery, which is the construction of guitars. Unfortunately, I am an apartment dweller without a garage, which puts a damper on this hobby. Besides, my free-loading house mate (she's a cat) would likely disapprove of the noise.</p>
         </div>
